--- a/client/src/components/homeStyle.css
+++ b/client/src/components/homeStyle.css
@@ -3,15 +3,15 @@
 
 }
 
-body {
+#pageWrapper body {
     font-size: 24px;
 }
 
-h1 {
+#pageWrapper h1 {
     font-size: 32px;
 }
 
-p {
+#pageWrapper p {
     max-width: 26vw;
 }
 
@@ -31,7 +31,7 @@ p {
     height: 30vh;
 }
 
-.line {
+#midIcons .line {
     border-left-style: solid;
     border-left-color: grey;
     border-left-width: 2px;
