Modal button redirect bug fix and added new pages

--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -4,9 +4,10 @@
 
     pointer-events: none;
   }
-#blue {
+.leonblue {
   color: #00617F !important;
 }
+
 
 @keyframes Navbar-logo-spin {
     from {
