Added comment section to artifact page, Changed new artifact symbol

--- a/client/src/components/homeStyle.css
+++ b/client/src/components/homeStyle.css
@@ -1,4 +1,4 @@
-#pageWrapper {
+/* #pageWrapper {
     font-family: Arial;
 
 }
@@ -53,4 +53,4 @@
 
 #midIcons Avatar {
     backgroundColor: #8fb4c4;
-}
+} */
