--- a/client/src/components/D3tree.css
+++ b/client/src/components/D3tree.css
@@ -25,3 +25,20 @@ text
 {
     visibility: hidden;
 }
+
+.node circle {
+  cursor: pointer;
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+}
+
+path.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
+}
