some clean up, started implementation of artifact update

--- a/client/src/components/D3tree.css
+++ b/client/src/components/D3tree.css
@@ -1,4 +1,4 @@
-rect
+/* rect
 {
     fill:white;
     stroke:silver;
@@ -41,4 +41,4 @@ path.link {
   fill: none;
   stroke: #ccc;
   stroke-width: 1.5px;
-}
+} */
