--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -1,4 +1,4 @@
-
+/* 
 .Navbar-logo {
     animation: Navbar-logo-spin infinite 20s linear;
 
@@ -16,4 +16,4 @@
     to {
       transform: rotate(360deg);
     }
-  }
+  } */
